--- a/style.css
+++ b/style.css
@@ -1,37 +1,139 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
-
-.offset:before {
-  display: block;
-  content: "";
-  height: 4rem;
-  margin-top: -4rem;
+@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
+/* @font-face {
+  font-family: "Unique";
+  src: url(./webfontkit-20210125-102324/unique-webfont.woff);
+  font-weight: 1000;
+} */
+/* Navbar */
+navbar-fixed-top {
+  margin: 0;
+}
+.navLogo {
+  height: 3.8rem;
 }
 
+body {
+  background-color: rgb(250, 62, 28) !important;
+  color: antiquewhite !important;
+  font-family: "Dosis";
+}
+
+.bg-light {
+  background-color: rgb(250, 62, 28) !important;
+}
+
+a {
+  color: antiquewhite !important;
+  text-align: center;
+}
 /* Landing Page */
-.home-inner {
-  /* background-image: url(/img/bnw\ stools.jpeg); */
-  background-color: aqua;
+#home.container-fluid {
+  padding: 0;
+  margin: 0;
 }
+
+.band {
+  max-width: 100%;
+  max-height: 70%;
+  margin-top: 1.6rem;
+  border-top: antiquewhite double 0.5rem;
+  border-bottom: antiquewhite double 0.5rem;
+  padding-bottom: 0.8rem;
+  padding-top: 0.8rem;
+}
+
+.logo {
+  display: block;
+  margin: auto;
+  height: 7rem;
+}
+
 .caption {
   width: 100%;
   max-width: 100%;
   position: absolute;
-  top: 38%;
+  top: 1%;
   z-index: 1;
-  color: rgb(240, 95, 12);
+  /* color: rgb(250, 250, 250); */
   text-transform: uppercase;
 }
-.caption h1 {
-  font-size: 3.8rem;
-  font-weight: 700;
-  letter-spacing: 0.3rem;
-  text-shadow: 0.1rem 0.1rem 0.8rem black;
+.box {
+  text-align: ;
+}
+.heading {
+  /* font-family: "Unique"; */
+  font-size: 3rem;
+  text-shadow: 0.1rem 0.7rem 0.9rem rgba(0, 0, 0, 0.753);
+  padding-bottom: 0.1rem;
+  text-align: center;
+}
+.landing svg {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.container.de {
+  margin-top: 2rem;
+}
+.col-4.child {
+  text-align: right;
+}
+
+/* About us page */
+
+.intro {
+  text-align: center;
+}
+
+.about-img {
+  height: auto;
+  max-width: 100%;
+  padding: 0%;
+}
+
+.about .row {
+  margin-bottom: 1rem;
+}
+
+/* footer */
+footer a {
+  color: antiquewhite;
+  font-size: 1rem;
+  margin: 1.2rem 0.5rem 0 0;
+}
+footer .contact {
+  height: 2rem;
+}
+
+/* About */
+
+.headshot {
+  height: auto;
+  max-width: 60%;
+  border-radius: 50%;
+}
+
+.headshot {
+  /* align-content: center; */
+  /* width: fit-content; */
+}
+
+.centered {
+  float: none;
+  margin: 0 auto;
+}
+
+/* Media */
+.embed-responsive {
   padding-bottom: 1rem;
 }
-.caption h3 {
-  font-size: 2rem;
-  text-shadow: 0.1rem 1rem 0.5rem black;
-  padding-bottom: 1.6rem;
+/* .media .carousel {
+  width: 100%;
+  height: 100%;
+} */
+.media img {
+  max-height: 50%;
+  max-width: 100%;
 }
 
 /*============ BOOTSTRAP BREAK POINTS:
@@ -51,4 +153,4 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 
-=============*/
+=============*/ ;
