small updates, site deployed

--- a/public/style.css
+++ b/public/style.css
@@ -13,13 +13,13 @@ navbar-fixed-top {
 }
 
 body {
-  background-color: #cc5500 !important;
+  background-color: #ec4e1b !important;
   color: antiquewhite !important;
   font-family: "Dosis";
 }
 
 .bg-light {
-  background-color: #cc5500 !important;
+  background-color: #ec4e1b !important;
 }
 
 a {
