--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,12 @@
   font-weight: 1000;
 } */
 /* Navbar */
+
+body {
+  box-sizing: border-box;
+  width: 100%;
+}
+
 navbar-fixed-top {
   margin: 0;
 }
@@ -27,7 +33,7 @@ a {
   text-align: center;
 }
 /* Landing Page */
-#home.container-fluid {
+.container-fluid {
   padding: 0;
   margin: 0;
 }
@@ -67,6 +73,14 @@ a {
   padding-bottom: 0.1rem;
   text-align: center;
 }
+
+.heading-underline {
+  width: 3rem;
+  height: 0.2rem;
+  background-color: antiquewhite;
+  margin: 0 auto 2rem;
+}
+
 .landing svg {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -96,6 +110,11 @@ a {
 }
 
 /* footer */
+
+footer {
+  margin-bottom: 2rem;
+}
+
 footer a {
   color: antiquewhite;
   font-size: 1rem;
@@ -134,6 +153,20 @@ footer .contact {
 .media img {
   max-height: 50%;
   max-width: 100%;
+}
+
+.fa-spotify {
+  height: 4rem;
+}
+
+.email:hover .fa-envelope {
+  color: black;
+}
+
+.spotify:hover {
+  transition-timing-function: ease;
+  transition: 0.3s;
+  font-size: 150%;
 }
 
 /*============ BOOTSTRAP BREAK POINTS:
