--- a/public/style.css
+++ b/public/style.css
@@ -53,11 +53,12 @@ a {
 .band {
   max-width: 100%;
   max-height: 70%;
-  margin-top: 1.6rem;
   border-top: antiquewhite double 0.5rem;
   border-bottom: antiquewhite double 0.5rem;
   padding-bottom: 0.8rem;
   padding-top: 0.8rem;
+  display: block;
+  margin: auto;
 }
 
 .bandxl {
